--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
     "swiper": "^11.0.3",
+    "tsparticles": "^2.12.0",
     "typeit-react": "^2.6.4",
     "web-vitals": "^2.1.4"
   },
